# pi0-quant

./: README.md  plot_ablation.py  pyproject.toml  test_ablation_rmse.py
dependencies/fpex/model/: bf16_exp_model.py
experiments/: README.md  decode_npz.py  run_eval.py  run_eval_mx_io.py  run_output_eval.py  sweep_extra_bits.py  test_error_distribution.py
func_models_sa/systolic_c/: systolic_array_model.h  systolic_array_rtl_linear.py
funct_models_ipt/ipt_numba/: ipt_rtl_linear.py  test_functional_vs_rtl.py
funct_models_ipt/ipt_numba_exp/: _numba_kernels.py  converters.py  ipt_rtl_linear.py  params_and_requests.py
funct_models_vector/: bf16_utils.py  gen_vectors.py
funct_models_vector/lane_boxes/: exp.py
funct_models_vector/tests/: test_col_add_vec.py  test_exp_placeholder.py  test_gen_vectors_cli.py  test_rcp.py  test_rtl_actual_outputs.py  test_tanh_rec.py  test_vector_rtl_forward.py  test_vector_rtl_forward_fuzz.py  test_vpu_op_enum_order.py
pi0_inout/: __init__.py  automate_rel_sweep.py  eval_harness.py  matmul_io_store.py  model_patcher.py  noise_sweep.py  quant_linear.py  quant_types.py  quant_vector.py  reference_store.py  rel_noise.py  run_matvec_ulp_sweep.py  run_rel_sweep_two_servers.py  run_ulp_server_experiment.py  run_ulp_sweep_two_servers.py  serve_quant.py  stats_tracker.py  ulp_noise.py
pi0_inout_noise/: README.md  __init__.py  _jax_stubs.py  automate_rel_sweep.py  eval_harness.py  model_patcher.py  quant_linear.py  rel_noise.py  run_benchmark.py  run_rel_sweep_two_servers.py  run_ulp_server_experiment.py  serve_quant.py  stats_tracker.py
(+3 files in other folders)
